# Taurus_cpp

./: .gitignore  README.md
Lab_01/: Main(1).cpp
Lab_01/include/: B5Page.h  Book.h
Lab_01/sources/: B5Page.cpp
Lab_02/: CMakeLists.txt  Main(2).cpp
Lab_02/include/: Book.h  Page.h  TitlePage.h
Lab_02/sources/: Book.cpp
Lab_03/: Main.cpp
Lab_03/include/: B5Page.h  Book.h  Page.h  TitlePage.h
Lab_03/sources/: B5Page.cpp  Book.cpp
Lab_04/: CMakeLists.txt  Main.cpp
Lab_04/include/: Book.h  Magazine.h  Publication.h
Lab_04/sources/: Book.cpp  Magazine.cpp  Publication.cpp
Lab_05/: Main.cpp
Lab_05/include/: A4Page.h  B5Page.h  Book.h  Magazine.h  Page.h  Publication.h  TitlePage.h
Lab_05/sources/: Book.cpp  Publication.cpp
Lab_06/Lab06/: CMakeLists.txt  Main.cpp
Lab_06/Lab06/include/: Distance.h  Gps.h  Haversine.h  Main.h
Lab_07/: CMakeLists.txt  Main.cpp
Lab_07/include/: Compass.h  Distance.h  Gps.h  Main.h  TrackingSystem.h  TrackingUnit.h
Lab_07/sources/: Compass.cpp
Lab_08/: CMakeLists.txt  Main.cpp
Lab_08/include/: Main.h  MyExceptions.h  ObiektMiotajacy.h
Lab_08/sources/: ObiektMiotajacy.cpp
Lab_09/: CMakeLists.txt
Lab_09/include/: Lokaj.h  Main.h  Pomieszczenie.h
Lab_10/: CMakeLists.txt  Main.cpp
Lab_10/include/: Compass.h  Factory.h  Gps.h  Main.h  TrackingUnit.h
Lab_11/: CMakeLists.txt  Main.cpp
Lab_11/include/: DynArray.h  main.hpp
Lab_12/: CMakeLists.txt  Main.cpp
Lab_12/include/: BaseNode.h  List.h  Node.h
